@@ -5131,7 +5131,7 @@ BOOL CSVNStatusListCtrl::OnToolTipText(UINT /*id*/, NMHDR *pNMHDR, LRESULT *pRes
 
 void CSVNStatusListCtrl::OnPaint()
 {
-    Default();
+    LRESULT defres = Default();
     if ((m_bBusy)||(m_bEmpty))
     {
         CString str;
@@ -5180,9 +5180,16 @@ void CSVNStatusListCtrl::OnPaint()
         }
         ReleaseDC(pDC);
     }
-    CRect rc;
-    GetUpdateRect(&rc, FALSE);
-    ValidateRect(rc);
+    if (defres)
+    {
+        // the Default() call did not process the WM_PAINT message!
+        // Validate the update region ourselves to avoid
+        // an endless loop repainting
+        CRect rc;
+        GetUpdateRect(&rc, FALSE);
+        if (!rc.IsRectEmpty())
+            ValidateRect(rc);
+    }
 }
 
 // prevent users from extending our hidden (size 0) columns
